src/objects/ints__EfxReport_Data_Warning_Message__c.object
<CustomObject>
    <fields>
        <fullName>ints__EfxReport__c</fullName>
        <label>EfxReport</label>
        <referenceTo>ints__EfxReport__c</referenceTo>
        <relationshipLabel>EfxReport Data Warning Messages</relationshipLabel>
        <relationshipName>EfxReport_Data_Warning_Messages</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ints__code__c</fullName>
        <label>code</label>
        <length>2</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <fields>
        <fullName>ints__description__c</fullName>
        <label>description</label>
        <length>175</length>
        <maskChar>X</maskChar>
        <maskType>all</maskType>
        <type>EncryptedText</type>
    </fields>
    <label>EfxReport Data Warning Message</label>
    <nameField>
        <displayFormat>EQFX_WARN-{000000000}</displayFormat>
        <label>Equifax Data Warning Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>EfxReport Data Warning Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>